--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
-name = "rosu-pp-py"
-version = "0.9.1"
+name = "akatsuki-pp-py"
+version = "0.9.2"
 description = "osu! difficulty and pp calculation for all modes"
-authors = ["Max Ohn <ohn.m@hotmail.de>"]
+authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
 license = "MIT"
 edition = "2021"
 
 [lib]
-name = "rosu_pp_py"
+name = "akatsuki_pp_py"
 crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
-rosu-pp = { version = "0.9.1" }
+akatsuki-pp = { version = "0.9.2", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs" }
 
 [profile.release]
 lto = "fat"
