--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["maturin>=0.12,<0.13", "setuptools", "setuptools-rust", "wheel"]
 build-backend = "maturin"
 
 [project]
-name = "rosu-pp-py"
-version = "0.9.1"
+name = "akatsuki-pp-py"
+version = "0.9.2"
 requires-python = ">=3.7"
 description = "osu! difficulty and pp calculation for all modes"
 classifiers = [
@@ -16,9 +16,9 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
-packages = [{ include = "rosu_pp_py" }]
-authors = [{ name = "Max Ohn", email = "ohn.m@hotmail.de" }]
+packages = [{ include = "akatsuki_pp_py" }]
+authors = [{ name = "Max Ohn", email = "ohn.m@hotmail.de" }, { name = "tsunyoku", email = "tsunyoku@gmail.com" }]
 readme = "README.md"
 license = { file = "LICENSE" }
-repository = "https://github.com/MaxOhn/rosu-pp-py"
+repository = "https://github.com/osuAkatsuki/akatsuki-pp-py"
 keywords = ["osu", "pp", "stars", "performance", "difficulty"]
