feat: update publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Install built wheel - x86_64
         run: |
-          pip install rosu_pp_py --no-index --find-links dist --force-reinstall
-          python -c "import rosu_pp_py"
+          pip install akatsuki_pp_py --no-index --find-links dist --force-reinstall
+          python -c "import akatsuki_pp_py"
 
       - name: Build wheels - universal2
         uses: messense/maturin-action@v1
@@ -44,8 +44,8 @@ jobs:
   
       - name: Install built wheel - universal2
         run: |
-          pip install rosu_pp_py --no-index --find-links dist --force-reinstall
-          python -c "import rosu_pp_py"
+          pip install akatsuki_pp_py --no-index --find-links dist --force-reinstall
+          python -c "import akatsuki_pp_py"
 
       - name: Upload wheels
         uses: actions/upload-artifact@v3
@@ -83,8 +83,8 @@ jobs:
 
       - name: Install built wheel
         run: |
-          pip install rosu_pp_py --no-index --find-links dist --force-reinstall
-          python -c "import rosu_pp_py"
+          pip install akatsuki_pp_py --no-index --find-links dist --force-reinstall
+          python -c "import akatsuki_pp_py"
 
       - name: Upload wheels
         uses: actions/upload-artifact@v3
@@ -117,8 +117,8 @@ jobs:
     - name: Install built wheel
       if: matrix.target == 'x86_64'
       run: |
-        pip install rosu_pp_py --no-index --find-links dist --force-reinstall
-        python -c "import rosu_pp_py"
+        pip install akatsuki_pp_py --no-index --find-links dist --force-reinstall
+        python -c "import akatsuki_pp_py"
 
     - name: Upload wheels
       uses: actions/upload-artifact@v3
