--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Python setup
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: 3.9
           architecture: x64
@@ -27,10 +27,10 @@ jobs:
           default: true
 
       - name: Build wheels - x86_64
-        uses: messense/maturin-action@v1
+        uses: PyO3/maturin-action@v1
         with:
           target: x86_64
-          args: --release --out dist
+          args: --release --out dist --sdist
 
       - name: Install built wheel - x86_64
         run: |
@@ -38,9 +38,9 @@ jobs:
           python -c "import akatsuki_pp_py"
 
       - name: Build wheels - universal2
-        uses: messense/maturin-action@v1
+        uses: PyO3/maturin-action@v1
         with:
-          args: --release --universal2 --out dist --no-sdist
+          args: --release --universal2 --out dist
   
       - name: Install built wheel - universal2
         run: |
@@ -63,7 +63,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Python setup
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: 3.9
           architecture: ${{ matrix.target }}
@@ -76,10 +76,10 @@ jobs:
           default: true
 
       - name: Build wheels
-        uses: messense/maturin-action@v1
+        uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --no-sdist
+          args: --release --out dist
 
       - name: Install built wheel
         run: |
@@ -93,7 +93,7 @@ jobs:
           path: dist
 
   linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         target: [x86_64, i686]
@@ -102,17 +102,17 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Python setup
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: 3.9
         architecture: x64
 
     - name: Build wheels
-      uses: messense/maturin-action@v1
+      uses: PyO3/maturin-action@v1
       with:
         target: ${{ matrix.target }}
         manylinux: auto
-        args: --release --out dist --no-sdist
+        args: --release --out dist -i 3.9
 
     - name: Install built wheel
       if: matrix.target == 'x86_64'
