--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python_version: [3.9, 3.10, 3.11]
+        python_version: ['3.9', '3.10', '3.11']
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -60,7 +60,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python_version: [3.9, 3.10, 3.11]
+        python_version: ['3.9', '3.10', '3.11']
         target: [x64, x86]
     steps:
       - name: Checkout project
@@ -100,7 +100,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python_version: [3.9, 3.10, 3.11]
+        python_version: ['3.9', '3.10', '3.11']
         target: [x86_64, i686]
     steps:
     - name: Checkout project
@@ -136,7 +136,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python_version: [3.9, 3.10, 3.11]
+        python_version: ['3.9', '3.10', '3.11']
     needs: [ macos, windows, linux ]
     steps:
       - name: Get artifacts
