feat: support linux aarch64

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -101,7 +101,7 @@ jobs:
     strategy:
       matrix:
         python_version: ['3.7', '3.8', '3.9', '3.10', '3.11']
-        target: [x86_64, i686]
+        target: [x86_64, i686, aarch64]
     steps:
     - name: Checkout project
       uses: actions/checkout@v3
