--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["maturin>=0.14,<0.15"]
 build-backend = "maturin"
 
 [project]
-name = "akatsuki-pp-py"
-version = "1.0.5"
+name = "refx-pp-py"
+version = "0.0.1"
 requires-python = ">=3.7"
 description = "osu! difficulty and pp calculation for all modes"
 classifiers = [
@@ -16,12 +16,13 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
-packages = [{ include = "akatsuki_pp_py" }]
+packages = [{ include = "refx_pp_py" }]
 authors = [
     { name = "Max Ohn", email = "ohn.m@hotmail.de" },
     { name = "tsunyoku", email = "tsunyoku@gmail.com" },
+    { name = "ldci4", email = "anoletenu@gmail.com"}
 ]
 readme = "README.md"
 license = { file = "LICENSE" }
-repository = "https://github.com/osuAkatsuki/akatsuki-pp-py"
+repository = "https://github.com/ldci4/refx-pp-py"
 keywords = ["osu", "pp", "stars", "performance", "difficulty"]
