--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "refx-pp-py"
-version = "0.0.7"
+version = "0.0.8"
 description = "osu! difficulty and pp calculation for all modes"
 authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>", "ldci4 <anoletenu@gmail.com>"]
 license = "MIT"
@@ -12,7 +12,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
-refx-pp = { git = "https://github.com/ldci4/refx-pp-rs", rev = "8de8487cfa9e8a37c020a11ba65119aad0871abb" }
+refx-pp = { git = "https://github.com/refx-online/refx-pp-rs", rev = "65f61032880657bdd9c65118b6705d06c31ef98c" }
 
 [profile.release]
 lto = "fat"
