--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "refx-pp-py"
-version = "0.0.7"
+version = "0.0.8"
 requires-python = ">=3.7"
 description = "osu! difficulty and pp calculation for all modes"
 classifiers = [
@@ -24,5 +24,5 @@ authors = [
 ]
 readme = "README.md"
 license = { file = "LICENSE" }
-repository = "https://github.com/ldci4/refx-pp-py"
+repository = "https://github.com/refx-online/refx-pp-py"
 keywords = ["osu", "pp", "stars", "performance", "difficulty"]
