--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "refx-pp-py"
+# name = "dev-pp-py"
 version = "0.3.5"
 requires-python = ">=3.7"
 description = "osu! difficulty and pp calculation for all modes"
