--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
-# refx-pp = { git = "https://github.com/refx-online/refx-pp-rs", rev = "fe651bddfc895e49755babaa2352f9e26804c9a2" }
-refx-pp = { path = "../refx-pp-rs" }
+refx-pp = { git = "https://github.com/refx-online/refx-pp-rs", rev = "acf68564ecae98aaba4a7a5e4746174e9fb9f0e4" }
+# refx-pp = { path = "../refx-pp-rs" }
 
 [profile.release]
 lto = "fat"
